# Advent-of-Code-2025

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
src/day01/: SecretEntrance.ipynb
src/day02/: GiftShop.ipynb
src/day03/: Lobby.ipynb
